# Project_ATM

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  EDA.ipynb  EDA.md  README.md  archive.rar  docker-compose.yaml  pyproject.toml
.dvc/: config
api/: main.py
archive/: OUTPUT.json
archive/grab-grab/: districts.py  infogetter.py  json_pattern.py  main.py  places.py  requirements.txt  streets.py  util_module.py
atm/: __init__.py  data.py  dataset.py  regression.py  regression_NN.py
atm/api/: main.py  predictions.csv
atm/experiments/: .gitignore  __init__.py  predict.py  prediction.py
atm/hydra/: config.yaml
atm/preprocessing/: __init__.py  data_manipulation.py  proces.py  train_test_split.py  transform_data.py
atm/services/bot/: bot.py
atm/services/dashboard/: dashboard.py
atm/services/fastapi/: __init__.py  fastapi.py
atm/utils/: __init__.py  gridsearch.py
atmFastapi/: Dockerfile  pyproject.toml  transform.py
atmFastapi/api/: feedback.csv  main.py
bot/: Dockerfile  bot.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dashboard/: Dockerfile  dashboard.py  pyproject.toml
data/: .gitignore  X_test.csv  X_test.csv.dvc  X_train.csv  X_train.csv.dvc  data.csv.dvc  data_pipeline.pkl.dvc  density.csv.dvc  feedback.csv.dvc  model.pkl.dvc  model_NN.pkl  predict.csv  predict.csv.dvc  predictions.csv.dvc  salary.csv.dvc  salary_processed.csv.dvc  settlements.csv.dvc  settlements_processed.csv.dvc  submit.csv.dvc  test.csv  test.csv.dvc  train.csv  train.csv.dvc  train0.csv.dvc  train1.csv.dvc  y_test.csv  y_test.csv.dvc  y_train.csv  y_train.csv.dvc
fastapi/: Dockerfile  api.py  transform.py  transform_data.py
grab-grab/: districts.py  infogetter.py  json_pattern.py  main.py  places.py  requirements.txt  streets.py  util_module.py
hydra/: config.yaml
models/: model.h5.dvc
streamlit/: Dockerfile  dashboard.py  pyproject.toml
Чекпойнт по проектам №2/: EDA.md  parser.ipynb  train.csv
