[tool.poetry]
name = "atm"
version = "1.0.0"
description = "mlops"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com>",
           "blarno <bigsquare@mail.ru>",
           "wndmick <adammcd333@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
streamlit = "^1.32.2"
pydeck = "^0.8.0"
plotly = "^5.20.0"
mlflow = "^2.11.3"
xgboost = "^2.0.3"
fire = "^0.6.0"
fastapi = "^0.110.1"
redis = "^5.0.3"
aiogram = "^3.4.1"
category-encoders = "^2.6.3"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
dvc = "^3.39.0"
dvc-gdrive = "^3.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"