[tool.poetry]
name = "atm"
version = "1.0.0"
description = "mlops"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com>",
           "blarno <bigsquare@mail.ru>",
           "wndmick <adammcd333@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
plotly = "^5.20.0"
mlflow = "^2.11.3"
xgboost = "^2.0.3"
fire = "^0.6.0"
category-encoders = "^2.6.3"
hydra-core = "^1.3.2"
torch = "^2.3.0"
lightning = "^2.2.5"
torchvision = "^0.18.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
dvc = "^3.39.0"
dvc-gdrive = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"