[tool.poetry]
name = "atm-fastapi"
version = "1.0.0"
description = "FastApi for determining the popularity of geolocation for ATM placement"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com>",
           "blarno <bigsquare@mail.ru>",
           "wndmick <adammcd333@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
xgboost = "^2.0.3"
fastapi = "^0.110.1"
redis = "^5.0.3"
category-encoders = "^2.6.3"
uvicorn = "^0.29.0"
dvc = "^3.39.0"
dvc-gdrive = "^3.0.1"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"