[tool.poetry]
name = "atm-dashboard"
version = "1.0.0"
description = "Telegram bot for determining the popularity of geolocation for ATM placement"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com>",
           "blarno <bigsquare@mail.ru>",
           "wndmick <adammcd333@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
aiogram = "^2.25.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"