[tool.poetry]
name = "atm-bot"
version = "1.0.0"
description = "Telegram bot for determining the popularity of geolocation for ATM placement"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com>",
           "blarno <bigsquare@mail.ru>",
           "wndmick <adammcd333@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
aiogram = "^3.4.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"